--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==4.2.6
 django-bootstrap-icons==0.8.6
 django-bootstrap-v5==1.0.11
 django-crispy-forms==2.1
+django-filter==23.3
 idna==3.4
 Pillow==10.1.0
 requests==2.31.0
