--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,61 @@
+arabic-reshaper==3.0.0
 asgiref==3.7.2
+asn1crypto==1.5.1
+attrs==23.1.0
 beautifulsoup4==4.12.2
 certifi==2023.7.22
+cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.1
+click==8.1.7
+colorama==0.4.6
 crispy-bootstrap5==0.7
+cryptography==41.0.7
+cssselect2==0.7.0
 defusedxml==0.7.1
 Django==4.2.6
 django-bootstrap-icons==0.8.6
 django-bootstrap-v5==1.0.11
 django-crispy-forms==2.1
 django-filter==23.3
+django-widget-tweaks==1.5.0
+exceptiongroup==1.2.0
+freetype-py==2.3.0
+h11==0.14.0
+html5lib==1.1
 idna==3.4
+lxml==4.9.3
+oscrypto==1.3.0
+outcome==1.3.0.post0
 Pillow==10.1.0
+pycairo==1.25.1
+pycparser==2.21
+pyHanko==0.21.0
+pyhanko-certvalidator==0.26.2
+pypdf==3.17.2
+pypng==0.20220715.0
+PySocks==1.7.1
+python-bidi==0.4.2
+PyYAML==6.0.1
+qrcode==7.4.2
+reportlab==4.0.8
 requests==2.31.0
+rlPyCairo==0.3.0
+selenium==4.16.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.5
 sqlparse==0.4.4
+svglib==1.5.1
+tinycss2==1.2.1
+trio==0.23.1
+trio-websocket==0.11.1
 typing_extensions==4.8.0
 tzdata==2023.3
+tzlocal==5.2
+uritools==4.0.2
 urllib3==2.0.7
-selenium==4.16.0
+webencodings==0.5.1
+wsproto==1.2.0
+xhtml2pdf==0.2.13
